# tslogger

./: CMakeLists.txt  README.md
api/: error.hpp  logger.hpp  logger_error.hpp  platform.hpp  safe_queue.hpp
examples/: container_logging.cpp  multithreading.cpp  simple_example.cpp
src/: error.cpp  logger.cpp  logger_error.cpp  platform_posix.cpp
